[gd_scene load_steps=2 format=3 uid="uid://ciyq2g4d1psug"]

[ext_resource type="Script" path="res://net_demo/core/ingame_gui.gd" id="1_20ubr"]

[node name="IngameGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20ubr")

[node name="ToggleMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ToggleMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Menu" type="VBoxContainer" parent="ToggleMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DisconnectButton" type="Button" parent="ToggleMenu/Menu"]
layout_mode = 2
text = "Disconnect"

[node name="PeerBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PeerIDLabel" type="Label" parent="PeerBoxContainer"]
layout_mode = 2
text = "Peer ID: "

[connection signal="pressed" from="ToggleMenu/Menu/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
